src/app/games/cards/cards.component.css
.cards-page {
  position: absolute;
  top: 56px;
  left: 0;
  right: 0;
  bottom: 0;
}

.card-container {
  position: absolute;
  top: 40px;
  bottom: 10px;
}

@media (min-width: 768px) {
  .full-height {
    height: 100%;
  }
  .half-height {
    height: 50%;
  }
}

.scrollable {
  overflow-y: auto;
}

.game-list .card {
  height: 95%;
}

.header {
  width: 100%;
  /*height: 60px;*/ /* Set the fixed height of the footer here */
  line-height: 30px; /* Vertically center the text there */
  background-color: #f5f5f5;
  margin-bottom: 10px;
}

.align-right {
  text-align: right;
}


.black-card {
  background-color: black;
  color: white;
}

.white-card {
  background-color: white;
  color: black;
}

.header .item {
  margin-right: 20px;
}

.card-body {
  padding: 0.75rem;
}

[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

